--- a/templates/recipe/video_list.html
+++ b/templates/recipe/video_list.html
@@ -100,7 +100,7 @@
             </div>
             
         {% empty %}
-                <h2>No video for the moment.</h2>
+                <h2>Aucune vidéo pour le moment.</h2>
         {% endfor %}
 
         </div>
