--- a/templates/restaurant/restaurant_list.html
+++ b/templates/restaurant/restaurant_list.html
@@ -98,7 +98,7 @@
                             {% endif %}
                                
                             {% if restaurant.web_site %}  
-                                <li><strong>Web site: </strong> {{restaurant.web_site}}</li>
+                                <li><strong>Web site: </strong><a href="{{restaurant.web_site}}"> {{restaurant.web_site}}</a></li>
                             {% endif %}   
                             </ul>
                             </dfn>
