--- a/templates/userprofile/contributor_list.html
+++ b/templates/userprofile/contributor_list.html
@@ -20,14 +20,14 @@
                                 <i class="fa fa-fw fa-user"></i><a>Users</a>
                             </li>
                             <li class="active">
-                                <i class="" aria-hidden="true"></i> Contributors
+                                <i class="" aria-hidden="true"></i> Contributeurs
                             </li>
                         </ol>
                     </div>
                 </div>
                 <!-- /.row -->
                 <div class="row">
-                    <div class="col-lg-12"><a href="{% url 'userprofile_add' %}" class="btn btn-primary"> Add a user</a></div>
+                    <div class="col-lg-12"><a href="{% url 'userprofile_add' %}" class="btn btn-primary"> Ajouter un utilisateur</a></div>
                 </div>
 
                 {% block content_user %}
