--- a/gastronomie/static/admin/css/sb-admin.css
+++ b/gastronomie/static/admin/css/sb-admin.css
@@ -8,7 +8,7 @@
 
 body {
     margin-top: 100px;
-    background-color: #440e0d;
+    background-color: #21380c;
 }
 
 @media(min-width:768px) {
@@ -122,7 +122,7 @@ ul.alert-dropdown {
         border: none;
         border-radius: 0;
         overflow-y: auto;
-        background-color: #440e0d;
+        background-color: #21380c;
         bottom: 0;
         overflow-x: hidden;
         padding-bottom: 40px;
