--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -4,6 +4,43 @@
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
+{% block slide %}
+   
+<section id="home" class="home">
+    
+      <!--   <div class="overlay">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 ">
+                        <div class="main_home_slider">
+                            <div class="single_home_slider">
+                                <div class="main_home wow"> -->
+                                    <!-- <h1>Cook' iT</h1> -->
+                                    <img src="{% static 'assets/images/food_1.jpg' %}">
+                                    <!-- <p class="subtitle">Découvir, Cuisiner, Savourer</p>
+
+                                    <div class="home_btn">
+                                        <a href="" class="btn btn-primary">LEARN MORE</a>
+                                    </div> -->
+<!-- 
+                                </div>
+                            </div>
+                            
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+    </section>
+{% endblock slide %}
+
+{% block header %}
+
+   
+{% endblock header %}
+
+
 {% block content_base %}
 <section class="portfolio">
     <div class="container">                                 
