--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -1,4 +1,14 @@
 {% load staticfiles %}
+{% load thumbnail %}
+{% load widget_tweaks %}
+{% load humanize %}
+{% load flatpages %}
+{% load i18n %}
+
+
+<!-- {% load dm2bn_tags %}
+
+{% include "dm2bn/includes/dm2bn_static.html" %} -->
 
 {% block extrahead %}
 <script>window.CKEDITOR_BASEPATH = '{% static "ckeditor/ckeditor/" %}';</script>
@@ -16,7 +26,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin - Bootstrap Admin Template</title>
+    <title>Cook'It - Administration</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'admin/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -29,6 +39,7 @@
 
     <!-- Custom Fonts -->
     <link href="{% static 'admin/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="{% static 'assets/css/toastr.scss' %}">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -54,7 +65,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Gastronomie Togolaise</a>
+                <a class="navbar-brand" href="/">Cook'It</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
@@ -137,8 +148,9 @@
                             <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
                         </li>
                         <li class="divider"></li>
+                       
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <a href="" data-toggle="modal" data-target="#logout"><i class="fa fa-fw fa-power-off" ia-hidden="true"></i> Log Out</a>
                         </li>
                     </ul>
                 </li>
@@ -153,58 +165,90 @@
                         <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a>
                     </li>
                     <li>
-                    	<a href=""><i class="fa fa-fw fa-edit"></i> Content</a>
-                        <ul>
+                        <a href="javascript:;" data-toggle="collapse" data-target="#recipe"><i class="fa fa-cutlery" aria-hidden="true"></i> {% trans 'Recettes' %} <i class="fa fa-fw fa-caret-down"></i></a>
+                        <ul id="recipe" class="list-unstyled collapse">
                             <li>
-                                <a href="javascript:;" data-toggle="collapse" data-target="#recipe"><i class="fa fa-cutlery" aria-hidden="true"></i> Recipes <i class="fa fa-fw fa-caret-down"></i></a>
-		                        <ul id="recipe" class="list-unstyled collapse">
-		                            <li>
-		                                <a href="{% url 'recipe_draft_list' %}">Draft Recipes</a>
-		                            </li>
-		                            <li>
-		                                <a href="{% url 'recipe_publish_list' %}">Published Recipes</a>
-		                            </li>
-		                        </ul>
+                                <a href="{% url 'recipe_new' %}">{% trans 'Ajouter' %}</a>
                             </li>
                             <li>
-                                <a href="javascript:;" data-toggle="collapse" data-target="#blog"><i class="fa fa-book" aria-hidden="true"></i>
-								Blog <i class="fa fa-fw fa-caret-down"></i></a>
-		                        <ul id="blog" class="list-unstyled collapse">
-		                            <li>
-		                                <a href="{% url 'post_draft_list' %}">Draft Posts</a>
-		                            </li>
-		                            <li>
-		                                <a href="{% url 'post_publish_list' %}">Published Posts</a>
-		                            </li>
-		                        </ul>
+                                <a href="{% url 'recipe_draft_list' %}">{% trans 'Liste en attente' %}</a>
                             </li>
                             <li>
-                            	<a href="javascript:;" data-toggle="collapse" data-target="#video"><i class="fa fa-video-camera" aria-hidden="true"></i> Videos<i class="fa fa-fw fa-caret-down"></i></a>
-                            	<ul id="video" class="list-unstyled collapse">
-		                            <li>
-		                                <a href="{% url 'video_draft_list' %}">Draft Videos</a>
-		                            </li>
-		                            <li>
-		                                <a href="{% url 'video_publish_list' %}">Published Videos</a>
-		                            </li>
-		                        </ul>
-							</li>
+                                <a href="{% url 'recipe_publish_list' %}">{% trans 'Liste publiée' %}</a>
+                            </li>
                         </ul>
-                        
                     </li>
-                 	
+                    <li>
+                        <a href="javascript:;" data-toggle="collapse" data-target="#blog"><i class="fa fa-book" aria-hidden="true"></i>
+                        Blog <i class="fa fa-fw fa-caret-down"></i></a>
+                        <ul id="blog" class="list-unstyled collapse">
+                            <li>
+                                <a href="{% url 'post_new' %}">{% trans 'Ajouter' %}</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'post_draft_list' %}">{% trans 'Liste en attente' %}</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'post_publish_list' %}">{% trans 'Liste publiée' %}</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <a href="javascript:;" data-toggle="collapse" data-target="#video"><i class="fa fa-video-camera" aria-hidden="true"></i> Videos<i class="fa fa-fw fa-caret-down"></i></a>
+                        <ul id="video" class="list-unstyled collapse">
+                            <li>
+                                <a href="{% url 'video_new' %}">{% trans 'Ajouter' %}</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'video_draft_list' %}">{% trans 'Liste en attente' %}</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'video_publish_list' %}">{% trans 'Liste publiée' %}</a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <a href="javascript:;" data-toggle="collapse" data-target="#resto"><i class="" aria-hidden="true"></i> Bons plans<i class="fa fa-fw fa-caret-down"></i></a>
+                        <ul id="resto" class="list-unstyled collapse">
+                            <li>
+                                <a href="">{% trans 'Ajouter' %}</a>
+                            </li>
+                            <li>
+                                <a href="">{% trans 'Liste' %}</a>
+                            </li>
+                            
+                        </ul>
+                    </li>
+
+                    <li>
+                        <a href="javascript:;" data-toggle="collapse" data-target="#pub"><i class="" aria-hidden="true"></i> Publicité<i class="fa fa-fw fa-caret-down"></i></a>
+                        <ul id="pub" class="list-unstyled collapse">
+                            <li>
+                                <a href="">{% trans 'Ajouter' %}</a>
+                            </li>
+                            <li>
+                                <a href="">{% trans 'Liste' %}</a>
+                            </li>
+                            
+                        </ul>
+                    </li>
+
+
+              	
                  	<li>
                         
-                        <a href="javascript:;" data-toggle="collapse" data-target="#user"><i class="fa fa-fw fa-user"></i>Users</a>
+                        <a href="javascript:;" data-toggle="collapse" data-target="#user"><i class="fa fa-fw fa-user"></i>Utilisateurs</a>
 								
-		                        <ul id="user" class="list-unstyled collapse">
-		                            <li>
-		                                <a href="{% url 'contributor_list' %}">Contributors</a>
-		                            </li>
-		                            <li>
-		                                <a href="{% url 'staff_list' %}">Staff</a>
-		                            </li>
-		                        </ul>
+	                        <ul id="user" class="list-unstyled collapse">
+	                            <li>
+	                                <a href="{% url 'contributor_list' %}">{% trans 'Contributeurs' %}</a>
+	                            </li>
+	                            <li>
+	                                <a href="{% url 'staff_list' %}">{% trans 'Staff' %}</a>
+	                            </li>
+	                        </ul>
                     </li>
                     
                     <li>
@@ -217,7 +261,7 @@
             </div>
             <!-- /.navbar-collapse -->
         </nav>
-        {% include 'partials/messages.html' %}
+       
         {% block content %}
 
         {% endblock content %}
@@ -225,10 +269,35 @@
     </div>
     <!-- /#wrapper -->
 
+    <!-- Modal  for logout-->
+        <div class="modal fade" id="logout" tabindex="-1" role="dialog" aria-labelledby="">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                 
+                </button>
+                  <h5 class="h5-responsive"> {% trans 'Log out' %}</h5>
+              </div>
+              <div class="modal-body">
+                <p>{% trans 'Etes-vous sur de vouloir vous déconnecter?' %}</p>
+                <form method="post" action="{% url 'account_logout' %}">
+                  {% csrf_token %}
+                  {% if redirect_field_value %}
+                  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+                  {% endif %}
+                  <button  class="btn btn-primary" type="submit">{% trans 'Oui' %}</button>
+                </form>
+              </div>
+              
+            </div>
+          </div>
+        </div>
 
 <!-- jQuery -->
     <script src="{% static 'admin/js/jquery.js' %}"></script>
-   
+    
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static 'admin/js/bootstrap.min.js' %}"></script>
 
@@ -236,7 +305,40 @@
     <script src="{% static 'admin/js/plugins/morris/raphael.min.js' %}"></script>
     <script src="{% static 'admin/js/plugins/morris/morris.min.js' %}"></script>
     <script src="{% static 'admin/js/plugins/morris/morris-data.js' %}"></script>
-   	<script type="text/javascript" src="{% static 'ckeditor/ckeditor-init.js' %}"></script>
-    <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script> 
+    <script  type="text/javascript" src="{% static 'assets/js/jquery.min.js' %}"></script> 
+    <script  type="text/javascript" src="{% static 'assets/js/toastr.js' %}"></script> 
+    <script type="text/javascript">
+      $(document).ready(function() { 
+            
+            toastr.options = {
+              "closeButton": false,
+              "debug": false,
+              "newestOnTop": false,
+              "progressBar": true,
+              "positionClass": "toast-top-right",
+              "preventDuplicates": false,
+              "onclick": null,
+              "showDuration": "300",
+              "hideDuration": "1000",
+              "timeOut": "5000",
+              "extendedTimeOut": "1000",
+              "showEasing": "swing",
+              "hideEasing": "linear",
+              "showMethod": "fadeIn",
+              "hideMethod": "fadeOut"
+             }
+
+       
+
+        });
+    </script>
+    {% if messages %}
+    {% for message in messages %}
+     
+      <script type="text/javascript">
+           toastr.{{message.tags }}("{{ message }}");
+      </script>
+   	{% endfor %}
+    {% endif %}
 </body>
 </html>
