--- a/templates/blog/post_draft_list.html
+++ b/templates/blog/post_draft_list.html
@@ -7,7 +7,7 @@
     <div class="row">
         
         <div class="col-lg-12">
-            <h2>Draft Posts</h2>
+            <h2>{% trans 'Articles en attente' %}</h2>
             <div class="table-responsive">
                 <table class="table table-bordered table-hover table-striped">
                     <thead>
@@ -42,7 +42,7 @@
                             </td>
                          </tr>
                         {% empty %}
-    						<tr>No posts for the moment.</tr>
+    						<tr>{% trans 'Aucun article pour le moment' %} </tr>
 
 
                         {% endfor %}  
