--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -104,7 +104,7 @@
 
                     	<hr>
                     	<div class="pull-left ">
-                    		<strong><a href="{% url 'post_detail' pk=post.pk %}" class="cook-first-color">READ MORE</a></strong>
+                    		<strong><a href="{% url 'post_detail' pk=post.pk %}" class="cook-first-color">{% trans 'READ MORE' %}</a></strong>
                     	</div>
                     	<div class="share pull-right clearfix">
                     		
