--- a/templates/blog/post_publish_list.html
+++ b/templates/blog/post_publish_list.html
@@ -16,9 +16,7 @@
                             <li>
                                 <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a>
                             </li>
-                            <li>
-                                <i class="fa fa-edit"></i>  <a href="">Content </a>
-                            </li>
+                            
                             <li class="active">
                                 <i class="fa fa-book" aria-hidden="true"></i> Blog
                             </li>
@@ -27,7 +25,7 @@
                 </div>
                 <!-- /.row -->
                 <div class="row">
-                    <div class="col-lg-12"><a href="{% url 'post_new' %}" class="btn btn-primary"> Add a post</a></div>
+                    <div class="col-lg-12"><a href="{% url 'post_new' %}" class="btn btn-primary"> {% trans 'Ajouter un article' %}</a></div>
                 </div>
 
 
@@ -35,7 +33,7 @@
                 <div class="row" id="modal-post">
                     
                     <div class="col-lg-12">
-                        <h2>All posts</h2>
+                        <h2>{% trans 'Articles publiés' %}</h2>
                         <div class="table-responsive">
                             <table class="table table-bordered table-hover table-striped">
                                 <thead>
@@ -63,13 +61,13 @@
                                             <a href="javascript:;" data-toggle="collapse" data-target="#action_{{post.id}}"><i class="fa fa-fw fa-arrows-v"></i> Actions <i class="fa fa-fw fa-caret-down"></i></a>
                                             <ul id="action_{{post.id}}" class="collapse">
                                                 <li>
-                                                    <a href="{% url 'post_preview' pk=post.pk %}"><i class="fa fa-eye" aria-hidden="true"></i> View</a>
+                                                    <a href="{% url 'post_preview' pk=post.pk %}"><i class="fa fa-eye" aria-hidden="true"></i> {% trans 'Voir' %}</a>
                                                 </li>
                                                 <li>
-                                                    <a href="{% url 'post_update' pk=post.pk %}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Update</a>
+                                                    <a href="{% url 'post_update' pk=post.pk %}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>{% trans 'Modifier' %}</a>
                                                 </li>
                                                 <li>
-                                                    <a data-toggle="modal" data-target="#deletepost{{post.id}}"><i class="fa fa-trash-o" aria-hidden="true"></i> Delete</a>
+                                                    <a data-toggle="modal" data-target="#deletepost{{post.id}}"><i class="fa fa-trash-o" aria-hidden="true"></i> {% trans 'Supprimer' %}</a>
                                                 </li>
                                             </ul>
 
@@ -82,21 +80,21 @@
                                             <div class="modal-content">
                                               <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                                <h4 class="modal-title" id="myModalLabel{{post.id}}">Confirm your post deletion</h4>
+                                                <h4 class="modal-title" id="myModalLabel{{post.id}}">{% trans 'Confimation de votre action' %}</h4>
                                               </div>
                                               <div class="modal-body">
-                                                <p class="lead">Are you sure you want to delete this post <strong>{{ post.title}}</strong>?</p>
+                                                <p class="lead">{% trans 'Etes-vous sûrs de vouloir supprimer cet article?' %}<strong>{{ post.title}}</strong>?</p>
                                               </div>
                                               <div class="modal-footer">
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                <a href="{% url 'post_delete' pk=post.pk %}" type="submit" class="btn btn-danger">Delete post</a>
+                                                <a href="{% url 'post_delete' pk=post.pk %}" type="submit" class="btn btn-danger">{% trans 'Suppimer l article' %}</a>
                                               </div>
                                             </div>
                                           </div>
                                         </div>
                                     </form>
                                     {% empty %}
-                                        <tr>No posts for the moment.</tr>
+                                        <tr>{% trans 'Aucun article pour le moment' %}</tr>
                                     {% endfor %}  
 
                                 </tbody>
