--- a/templates/partials/messages.html
+++ b/templates/partials/messages.html
@@ -1,8 +1,8 @@
  {% if messages %}
         {% for message in messages %}
          
-          <script type="text/javascript">
-               toastr.{{message.tags }}("{{ message }}");
-          </script>
+         
+             <p>{{ message }}</p>
+        
         {% endfor %}
         {% endif  %}
