--- a/templates/recipe/accueil.html
+++ b/templates/recipe/accueil.html
@@ -23,7 +23,7 @@
 
                                 </div>
                             </div>
-                            <div class="single_home_slider">
+                           <!--  <div class="single_home_slider">
                                 <div class="main_home wow fadeInUp" data-wow-duration="700ms">
                                     <h1>Cook' iT</h1>
                                     <p class="subtitle">Cuisiner</p>
@@ -40,7 +40,7 @@
                                   
 
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
