--- a/templates/recipe/recipe_draft_list.html
+++ b/templates/recipe/recipe_draft_list.html
@@ -7,7 +7,7 @@
     <div class="row">
         
         <div class="col-lg-12">
-            <h2>Draft Recipes</h2>
+            <h2> Recettes en attente de publication</h2>
             <div class="table-responsive">
                 <table class="table table-bordered table-hover table-striped">
                     <thead>
@@ -46,21 +46,21 @@
                                             <div class="modal-content">
                                               <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                                <h4 class="modal-title" id="myModalLabel{{recipe.id}}">Confirm your action</h4>
+                                                <h4 class="modal-title" id="myModalLabel{{recipe.id}}">Confirmer votre action</h4>
                                               </div>
                                               <div class="modal-body">
-                                                <p class="lead">Are you sure you want to delete this recipe <strong>{{ recipe.title}}</strong>?</p>
+                                                <p class="lead">% trans 'Etes-vous sûrs de vouloir supprimer cette recette?' %} <strong>{{ recipe.title}}</strong>?</p>
                                               </div>
                                               <div class="modal-footer">
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                <a href="{% url 'recipe_delete' pk=recipe.pk %}" type="submit" class="btn btn-danger">Delete recipe</a>
+                                                <a href="{% url 'recipe_delete' pk=recipe.pk %}" type="submit" class="btn btn-danger">Supprimer</a>
                                               </div>
                                             </div>
                                           </div>
                                         </div>
                                     </form>
                          {% empty %}
-                            <tr>No recipe for the moment.</tr>
+                            <tr>Aucune recette moment.</tr>
 
                         {% endfor %}  
  
