--- a/templates/recipe/recipe_preview.html
+++ b/templates/recipe/recipe_preview.html
@@ -66,7 +66,7 @@
                             <table class="table table-bordered table-hover table-striped">
                                 <thead>
                                     <tr>
-                                        <th><h4><strong>Ingredients</strong></h4></th>
+                                        <th><h4><strong>Ingrédients</strong></h4></th>
                                         <th><h4><strong>Instructions</strong></h4></th>
                                         
                                     </tr>
@@ -83,9 +83,9 @@
                 
                     <div class="row text-center">
                         <div class="col-sm-12">
-                            <a href="{% url 'recipe_update' pk=recipe.pk %}" class="btn btn-primary">Update</a>
+                            <a href="{% url 'recipe_update' pk=recipe.pk %}" class="btn btn-primary">Modifier</a>
                             {% if not recipe.published_at %}
-                            <a href="{% url 'recipe_publish' pk=recipe.pk %}" class="btn btn-primary">Publish</a>
+                            <a href="{% url 'recipe_publish' pk=recipe.pk %}" class="btn btn-primary">Publier</a>
                             {% endif %}
                         </div>
                     </div>
