--- a/templates/recipe/recipe_publish_list.html
+++ b/templates/recipe/recipe_publish_list.html
@@ -16,9 +16,7 @@
                             <li>
                                 <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a>
                             </li>
-                            <li>
-                                <i class="fa fa-fw fa-edit"></i><a>Contents</a>
-                            </li>
+                           
                             <li class="active">
                                 <i class="fa fa-cutlery" aria-hidden="true"></i> Recipes
                             </li>
@@ -27,14 +25,14 @@
                 </div>
                 <!-- /.row -->
                 <div class="row">
-                    <div class="col-lg-12"><a href="{% url 'recipe_new' %}" class="btn btn-primary"> Add a recipe</a></div>
+                    <div class="col-lg-12"><a href="{% url 'recipe_new' %}" class="btn btn-primary"> {% trans 'Ajouter une recette' %}</a></div>
                 </div>
 
                 {% block content_recipe %}
                 <div class="row" id="modal-recipe">
                     
                     <div class="col-lg-12">
-                        <h2>All Recipes</h2>
+                        <h2>Recettes publiées</h2>
                         <div class="table-responsive">
                             <table class="table table-bordered table-hover table-striped">
                                 <thead>
@@ -64,13 +62,13 @@
                                             <a href="javascript:;" data-toggle="collapse" data-target="#action_{{recipe.id}}"><i class="fa fa-fw fa-arrows-v"></i> Actions <i class="fa fa-fw fa-caret-down"></i></a>
                                             <ul id="action_{{recipe.id}}" class="collapse">
                                                 <li>
-                                                    <a href="{% url 'recipe_publish' pk=recipe.pk %}"><i class="fa fa-eye" aria-hidden="true"></i>View</a>
+                                                    <a href="{% url 'recipe_publish' pk=recipe.pk %}"><i class="fa fa-eye" aria-hidden="true"></i>Voir</a>
                                                 </li>
                                                 <li>
-                                                    <a href="{% url 'recipe_update' pk=recipe.pk %}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Update</a>
+                                                    <a href="{% url 'recipe_update' pk=recipe.pk %}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Modifier</a>
                                                 </li>
                                                 <li>
-                                                    <a data-toggle="modal" data-target="#deleteRecipe{{recipe.id}}"><i class="fa fa-trash-o" aria-hidden="true"></i>Delete</a>
+                                                    <a data-toggle="modal" data-target="#deleteRecipe{{recipe.id}}"><i class="fa fa-trash-o" aria-hidden="true"></i>Supprimer</a>
                                                 </li>
                                             </ul>
 
@@ -83,14 +81,14 @@
                                             <div class="modal-content">
                                               <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                                <h4 class="modal-title" id="myModalLabel{{recipe.id}}">Confirm your recipe deletion</h4>
+                                                <h4 class="modal-title" id="myModalLabel{{recipe.id}}">Confirmer votre action</h4>
                                               </div>
                                               <div class="modal-body">
-                                                <p class="lead">Are you sure you want to delete this recipe <strong>{{ recipe.title}}</strong>?</p>
+                                                <p class="lead">% trans 'Etes-vous sûrs de vouloir supprimer cette recette?' %}<strong>{{ recipe.title}}</strong>?</p>
                                               </div>
                                               <div class="modal-footer">
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                <a href="{% url 'recipe_delete' pk=recipe.pk %}" type="submit" class="btn btn-danger">Delete recipe</a>
+                                                <a href="{% url 'recipe_delete' pk=recipe.pk %}" type="submit" class="btn btn-danger">{ trans 'Supprimer' }</a>
                                               </div>
                                             </div>
                                           </div>
@@ -98,7 +96,7 @@
                                     
 
                                     {% empty %}
-                                        <tr>No recipe for the moment.</tr>
+                                        <tr>Aucune recette pour le moment.</tr>
                                     {% endfor %}  
 
 
