--- a/templates/recipe/recipe_update.html
+++ b/templates/recipe/recipe_update.html
@@ -13,7 +13,7 @@
                          {{ form.media }}
                           {{ form.as_p }}
                         
-                        <button type="submit" class="save btn btn-default">Submit</button>
+                        <button type="submit" class="save btn btn-default">Envoyer</button>
                     </form>
                 </div>
                 
