--- a/templates/recipe/video_draft_list.html
+++ b/templates/recipe/video_draft_list.html
@@ -7,7 +7,7 @@
     <div class="row">
         
         <div class="col-lg-12">
-            <h2>Draft videos</h2>
+            <h2> Videos en attente de publication</h2>
             <div class="table-responsive">
                 <table class="table table-bordered table-hover table-striped">
                     <thead>
@@ -43,7 +43,7 @@
                          </tr>
 
                         {% empty %}
-                        <tr>No video for the moment.</tr>
+                        <tr>Aucune video pour moment.</tr>
                         {% endfor %}  
                         
 
