--- a/templates/recipe/video_new.html
+++ b/templates/recipe/video_new.html
@@ -10,7 +10,7 @@
                     <form method="POST"  name="update-form" action="."  class="" enctype="multipart/form-data">
                         {% csrf_token %}
                         {{ form.as_p }}
-                        <button type="submit" class="save btn btn-default">Submit</button>
+                        <button type="submit" class="save btn btn-default">{% trans 'Envoyer' %}</button>
                     </form>
                 </div>
                 
