--- a/templates/recipe/video_publish_list.html
+++ b/templates/recipe/video_publish_list.html
@@ -27,7 +27,7 @@
                 </div>
                 <!-- /.row -->
                 <div class="row">
-                    <div class="col-lg-12"><a href="{% url 'video_new' %}" class="btn btn-primary"> Add a video</a></div>
+                    <div class="col-lg-12"><a href="{% url 'video_new' %}" class="btn btn-primary"> Ajouter une video</a></div>
                 </div>
 
 
@@ -35,7 +35,7 @@
                 <div class="row">
                     
                     <div class="col-lg-12">
-                        <h2>All videos</h2>
+                        <h2>Vidéos publiées</h2>
                         <div class="table-responsive">
                             <table class="table table-bordered table-hover table-striped">
                                 <thead>
@@ -61,13 +61,13 @@
                                             <a href="javascript:;" data-toggle="collapse" data-target="#action_{{video.id}}"><i class="fa fa-fw fa-arrows-v"></i> Actions <i class="fa fa-fw fa-caret-down"></i></a>
                                             <ul id="action_{{video.id}}" class="collapse">
                                                 <li>
-                                                    <a href="{% url 'video_preview' pk=video.pk%}"><i class="fa fa-eye" aria-hidden="true"></i>View</a>
+                                                    <a href="{% url 'video_preview' pk=video.pk%}"><i class="fa fa-eye" aria-hidden="true"></i>Voir</a>
                                                 </li>
                                                 <li>
-                                                    <a href="{% url 'video_update' pk=video.pk%}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Update</a>
+                                                    <a href="{% url 'video_update' pk=video.pk%}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>MOdifier</a>
                                                 </li>
                                                 <li>
-                                                    <a data-toggle="modal" data-target="#deletevideo{{video.id}}"><i class="fa fa-trash-o" aria-hidden="true"></i>Delete</a>
+                                                    <a data-toggle="modal" data-target="#deletevideo{{video.id}}"><i class="fa fa-trash-o" aria-hidden="true"></i>Supprimer</a>
                                                 </li>
                                             </ul>
 
@@ -80,21 +80,21 @@
                                             <div class="modal-content">
                                               <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                                <h4 class="modal-title" id="myModalLabel{{video.id}}">Confirm your video deletion</h4>
+                                                <h4 class="modal-title" id="myModalLabel{{video.id}}">Confirmer votre action</h4>
                                               </div>
                                               <div class="modal-body">
-                                                <p class="lead">Are you sure you want to delete this video <strong>{{ video.title}}</strong>?</p>
+                                                <p class="lead">Etes-vous sûrs de vouloir supprimer cette vidéo<strong>{{ video.title}}</strong>?</p>
                                               </div>
                                               <div class="modal-footer">
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                <a href="{% url 'video_delete' pk=video.pk %}" type="submit" class="btn btn-danger">Delete video</a>
+                                                <a href="{% url 'video_delete' pk=video.pk %}" type="submit" class="btn btn-danger"> Supprimer</a>
                                               </div>
                                             </div>
                                           </div>
                                         </div>
                                     </form>
                                         {% empty %}
-                                            <tr>No video for the moment.</tr>
+                                            <tr>Aucune vidéo pour le moment.</tr>
                                     {% endfor %}  
 
                                 </tbody>
