--- a/templates/star_ratings/widget_base.html
+++ b/templates/star_ratings/widget_base.html
@@ -55,9 +55,9 @@
     <!-- {% block rating_average %}
     <div class="star-ratings-rating-average">{% trans 'Average: ' %} <span class='star-ratings-rating-value'>{{ rating.average|floatformat:"-2" }}</span></div>
     {% endblock rating_average %} -->
-    {% block rating_count %}
+   <!--  {% block rating_count %}
     <div class="star-ratings-rating-count">{% trans 'Rating Count: ' %} <span class='star-ratings-rating-value'>{{ rating.count }}</span></div>
-    {% endblock rating_count %}
+    {% endblock rating_count %} -->
     <!-- {% block rating_user %}
     <div class="star-ratings-rating-user">{% trans 'You Rated: ' %} <span class='star-ratings-rating-value'>{% if user_rating %}{{ user_rating.score }}{% else %}{% trans 'Not rated' %}{% endif %}</span></div>
     {% if not user.is_authenticated and not anonymous_ratings and not read_only %}
