--- a/templates/stats.html
+++ b/templates/stats.html
@@ -1,5 +1,10 @@
-{% extends 'base_admin.html' %} 
 {% load staticfiles %}
+{% load thumbnail %}
+{% load widget_tweaks %}
+{% load humanize %}
+{% load flatpages %}
+{% load i18n %}
+
 {% block content %}
 
 <div id="page-wrapper">
