--- a/templates/userprofile/profile_add.html
+++ b/templates/userprofile/profile_add.html
@@ -27,20 +27,20 @@
                 </div>
                 <!-- /.row -->
                 <div class="row">
-                    <div class="col-lg-12"><a href="{% url 'userprofile_add' %}" class="btn btn-primary"> Add a user</a></div>
+                    <div class="col-lg-12"><a href="{% url 'userprofile_add' %}" class="btn btn-primary"> Ajouter un utilisateur</a></div>
                 </div>
 
                 {% block content_user %}
                  <!-- Post -->
                  <div class="row">
-                 {% include 'partials/messages.html' %}
+                 
                     <div class="col-lg-offset-2 col-lg-8">
                         <form method="POST"  name="form" action="."  class="form-group" enctype="multipart/form-data">
                        
                           {% csrf_token %}
                           {{ admin_form.as_p }}
                           
-                          <button type="submit">Register</button>
+                          <button type="submit" class="btn btn-primary">Enregistrer</button>
                         </form>
                                 
                     </div>            
