--- a/templates/userprofile/staff_list.html
+++ b/templates/userprofile/staff_list.html
@@ -27,14 +27,14 @@
                 </div>
                 <!-- /.row -->
                 <div class="row">
-                    <div class="col-lg-12"><a href="{% url 'userprofile_add' %}" class="btn btn-primary"> Add a user</a></div>
+                    <div class="col-lg-12"><a href="{% url 'userprofile_add' %}" class="btn btn-primary"> Ajouter un utilisateur</a></div>
                 </div>
 
                 {% block content_user %}
                 <div class="row" id="modal-user">
                     
                     <div class="col-lg-12">
-                        <h2>The Staff</h2>
+                        <h2>Administration</h2>
                         <div class="table-responsive">
                             <table class="table table-bordered table-hover table-striped">
                                 <thead>
