Reset du projet

--- a/templates/recipe/video_new.html
+++ b/templates/recipe/video_new.html
@@ -9,6 +9,7 @@
                 <div class="col-lg-offset-2 col-lg-8">
                     <form method="POST"  name="update-form" action="."  class="" enctype="multipart/form-data">
                         {% csrf_token %}
+                        {{ form.media }}
                         {{ form.as_p }}
                         <button type="submit" class="save btn btn-default">{% trans 'Envoyer' %}</button>
                     </form>
