Resturant view modifié

--- a/templates/recipe/recipe_detail.html
+++ b/templates/recipe/recipe_detail.html
@@ -188,7 +188,7 @@
                 </div>
            
                 <div class="col-md-4">
-                   <strong>{% trans 'Total' %}:</strong> 
+                   <strong>{% trans 'Prêt dans' %}:</strong> 
                    {% if recipe.total_time %}{{recipe.total_time|format_time}} {% else %} --- {% endif %}
                 </div>
            
@@ -207,7 +207,7 @@
         <div class="row  margin-top-40">
             <div class="col-md-4 rp-post-instruction  margin-top-40">
                        
-                <h5 class=""> Ingredients</h5>
+                <h5 class=""> Ingrédients</h5>
                 
                 <div class="rp-bloc-note">
                 <p>
