--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -70,14 +70,18 @@
                     <ul class="list-inline">
                     
                         <li><!-- <img src="{% static 'assets/images/chef2.jpg' %}" class="img-circle" width="30px;" alt=""> -->
-                      
-                            By <a href="" class="rp-author">{% trans 'L équipe' %}</a></li>  
+                             {% if post.author.is_staff_member %}
+                                 By <a href="#" class="rp-author">{% trans 'L équipe' %}</a> 
+                            {% else %}
+                            By <a href="" class="rp-author">{% trans 'L équipe' %}</a>
+                            {% endif %}
+                            </li>  
                         <li><i class="fa fa-calendar" aria-hidden="true"></i> {{ post.published_at|date:'F j, Y' }} </li> 
                         
                         <li><i class="fa fa-eye cook-second-color" aria-hidden="true"></i>{{post.view}}</li>
 
                         <li>
-                            <a class="likepost" data-recipe-pk="{{post.pk}}" type="button"><i class="fa fa-heart cook-second-color" aria-hidden="true"></i><span id="count-like-{{post.pk}}"></a>{{post.like}}</span>
+                            <a class="likepost" data-post-pk="{{post.pk}}" type="button"><i class="fa fa-heart cook-second-color" aria-hidden="true"></i><span id="count-like-{{post.pk}}"></a>{{post.like}}</span>
                         </li>
                         {% get_comment_count for post as comment_count %}
                         <li><a href="#commentaire"><i class="fa fa-comments cook-second-color" aria-hidden="true"></i></a>{{comment_count}}</li>
@@ -231,6 +235,67 @@
             {% endif %}
             </div>
     </section> 
+
+
+    <!-- Related post -->
+        <section class="rp-post-related">
+            <ul class="nav nav-tabs tabs-4">
+                <li class="active"><a data-toggle="tab" href="#posts">RELATED POSTS</a></li>   
+                <li><a data-toggle="tab" href="#authors">MORE FROM AUTHOR</a></li>  
+            </ul>   
+
+
+            <div class="tab-content">
+                <div id="posts" class="tab-pane fade in  active">
+                   <ul class="row list-unstyled" id="">
+                    {% for r in post_related %}
+                        <li class="col-md-4">    
+                        {% if r.image %}
+                            <a href="{% url 'post_detail' pk=r.pk %}">
+                            {% thumbnail r.image  "900x500" crop="center" as im %}
+                                <img src="{{im.url}}" class="img-responsive">       
+                            {% endthumbnail %}  
+                            </a>
+                        {% else %}
+                            <a href=""></a>
+                        {% endif %}
+
+                            <h5 class=""><a href="{% url 'post_detail' pk=r.pk %}" class="cook-second-color">{{r.title|truncatechars:30}}</a></h5>     
+                        </li>    
+                    {% endfor %} 
+                    </ul>
+                </div>
+
+                <div id="authors" id="content" class="defaults tab-pane fade in active">
+                
+                    <ul class="row list-unstyled" id="itemContainer">
+                    {% for r in post_author %}
+                        <li class="col-md-4">    
+                        {% if r.image %}
+                            <a href="{% url 'post_detail' pk=r.pk %}">
+                            {% thumbnail r.image  "900x500" crop="center" as im %}
+                                <img src="{{im.url}}" class="img-responsive">       
+                            {% endthumbnail %}  
+                            </a>
+                        {% else %}
+                            <a href=""></a>
+                        {% endif %}
+
+                            <h5 class=""><a href="{% url 'post_detail' pk=r.pk %}" class="cook-second-color">{{r.title|truncatechars:30}}</a></h5>     
+                        </li>    
+                    {% endfor %} 
+                    </ul>
+                
+                        
+                    <!-- pagination -->
+                {% if post_author.has_other_pages %}
+                    <div class="rp-related-pagination"></div>
+                {% endif %}         
+                </div>
+            </div>
+
+        </section>
+
 
 
 </div>
