--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -99,8 +99,9 @@
                             <li>  <i class="fa fa-tags cook-first-color"></i><strong>TAGS:</strong></li>
                             {% for tag in post.tags.all %}
 
-                             <li><a>{{tag.name}}</a></li>
+                            <li><a href="/blog/tag/?tag={{ tag.name }}">{{tag.name}}</a></li>
 
+                    
                             {% endfor %}
                             </ul>
                     </div>   
@@ -272,7 +273,7 @@
                     {% for r in post_author %}
                         <li class="col-md-4">    
                         {% if r.image %}
-                            <a href="{% url 'post_detail' pk=r.pk %}">
+                            <a href="{% url 'post_detail' slug=r.slug %}">
                             {% thumbnail r.image  "900x500" crop="center" as im %}
                                 <img src="{{im.url}}" class="img-responsive">       
                             {% endthumbnail %}  
@@ -281,7 +282,7 @@
                             <a href=""></a>
                         {% endif %}
 
-                            <h5 class=""><a href="{% url 'post_detail' pk=r.pk %}" class="cook-second-color">{{r.title|truncatechars:30}}</a></h5>     
+                            <h5 class=""><a href="{% url 'post_detail' slug=r.slug %}" class="cook-second-color">{{r.title|truncatechars:30}}</a></h5>     
                         </li>    
                     {% endfor %} 
                     </ul>
